# auto_selecter1

./: Cargo.toml
area/: main.rs
smp/: main.rs  models.rs  scraper_logic.rs
src/: main.rs  static_scraper.rs
