[package]
name = "auto_selecter1"
version = "0.1.0"
edition = "2021"
default-run = "area" # ← この行を追加

[dependencies]
#flutter_rust_bridge = "=2.4.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
num-format = "0.4"  # 最新バージョンを確認してください
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlDocument", "HtmlElement", "Element", "Node", 
    "Request", "RequestInit", "RequestMode", "Response","DomParser","NodeList"
] }
js-sys = "0.3"  # 必要ならば
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"  # 追加する
wasm-bindgen = "0.2"
axum = { version = "0.7.4", features = ["macros"] }
actix-web = "4.10.2"
urlencoding = "2.1" # ← これを追加

[[bin]]
name = "area"
path = "area/main.rs"
